--- a/WebContent/web.xml
+++ b/WebContent/web.xml
@@ -3,30 +3,56 @@
 	xmlns="http://xmlns.jcp.org/xml/ns/javaee"
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
-	<display-name>blog</display-name>
+	<display-name>ProxibanqueSIV2</display-name>
 
 	<servlet>
 		<servlet-name>IndexServlet</servlet-name>
-		<servlet-class>fr.formation.blog.presentation.IndexServlet</servlet-class>
+		<servlet-class>fr.formation.proxi.presentation.IndexServlet</servlet-class>
 	</servlet>
+
 	<servlet-mapping>
 		<servlet-name>IndexServlet</servlet-name>
 		<url-pattern>/index.html</url-pattern>
 	</servlet-mapping>
+	
 	<servlet>
-		<servlet-name>FormServlet</servlet-name>
-		<servlet-class>fr.formation.blog.presentation.FormServlet</servlet-class>
+		<servlet-name>AccountServlet</servlet-name>
+		<servlet-class>fr.formation.proxi.presentation.AccountServlet</servlet-class>
 	</servlet>
+
 	<servlet-mapping>
-		<servlet-name>FormServlet</servlet-name>
-		<url-pattern>/form.html</url-pattern>
+		<servlet-name>AccountServlet</servlet-name>
+		<url-pattern>/account.html</url-pattern>
 	</servlet-mapping>
+	
 	<servlet>
-		<servlet-name>DeleteServlet</servlet-name>
-		<servlet-class>fr.formation.blog.presentation.DeleteServlet</servlet-class>
+		<servlet-name>EditorServlet</servlet-name>
+		<servlet-class>fr.formation.proxi.presentation.EditorServlet</servlet-class>
 	</servlet>
+
 	<servlet-mapping>
-		<servlet-name>DeleteServlet</servlet-name>
-		<url-pattern>/delete.html</url-pattern>
+		<servlet-name>EditorServlet</servlet-name>
+		<url-pattern>/editor.html</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>ErrorServlet</servlet-name>
+		<servlet-class>fr.formation.proxi.presentation.ErrorServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>ErrorServlet</servlet-name>
+		<url-pattern>/error.html</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>TransferServlet</servlet-name>
+		<servlet-class>fr.formation.proxi.presentation.TransferServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>TransferServlet</servlet-name>
+		<url-pattern>/transfer.html</url-pattern>
+	</servlet-mapping>
+	
 </web-app>
