--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -43,5 +43,10 @@
 		<servlet-name>AccountServlet</servlet-name>
 		<url-pattern>/account.html</url-pattern>
 	</servlet-mapping>
+	
+	<error-page>
+		<exception-type>java.lang.Throwable</exception-type>
+		<location>/WEB-INF/views/error.jsp</location>
+	</error-page>
 
 </web-app>
