--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -45,7 +45,11 @@
 	</servlet-mapping>
 	
 	<error-page>
-		<exception-type>java.lang.Throwable</exception-type>
+	<error-code>404</error-code>
+		<location>/WEB-INF/views/error.jsp</location>
+	</error-page>
+	<error-page>
+	<error-code>500</error-code>
 		<location>/WEB-INF/views/error.jsp</location>
 	</error-page>
 
