--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,16 @@
 	xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
 	id="WebApp_ID" version="3.1">
 	<display-name>ProxibanqueSIV2</display-name>
+	
+	<servlet>
+		<servlet-name>Servlet de déconnexion</servlet-name>
+		<servlet-class>fr.formation.proxi.presentation.LogoutServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>Servlet de déconnexion</servlet-name>
+		<url-pattern>/logout</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>IndexServlet</servlet-name>
@@ -53,4 +63,30 @@
 		<location>/WEB-INF/views/error.jsp</location>
 	</error-page>
 
+	<resource-ref>
+		<res-ref-name>jdbc/proxibanquev2</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+	
+	<security-constraint>
+		<web-resource-collection>
+			<web-resource-name>All pages</web-resource-name>
+			<url-pattern>*.html</url-pattern>
+		</web-resource-collection>
+		<auth-constraint>
+			<role-name>admin</role-name>
+		</auth-constraint>
+	</security-constraint>
+	<security-role>
+		<role-name>admin</role-name>
+	</security-role>
+	
+	<login-config>
+		<auth-method>FORM</auth-method>
+		<form-login-config>
+			<form-login-page>/login.jsp</form-login-page>
+			<form-error-page>/login_error.jsp</form-error-page>
+		</form-login-config>
+	</login-config>
 </web-app>
