Correction de la fin de l'exercice d'ajout de carte bleue. La suppression est gérée aussi. J'ai modifié MysqlConnection pour que EntityManager soit un singleton, sinon il y a un problème avec le rafraichissement de la page index (le bouton ajouter n'est pas remplacé par le bouton supprimer ou l'inverse).

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,26 @@
 		<servlet-name>Servlet de déconnexion</servlet-name>
 		<url-pattern>/logout</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Servlet pour l'ajout de carte</servlet-name>
+		<servlet-class>fr.formation.proxi.presentation.BankCardServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>Servlet pour l'ajout de carte</servlet-name>
+		<url-pattern>/card.html</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>Servlet pour la suppression de carte</servlet-name>
+		<servlet-class>fr.formation.proxi.presentation.DeleteCardServlet</servlet-class>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>Servlet pour la suppression de carte</servlet-name>
+		<url-pattern>/delete_card.html</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>IndexServlet</servlet-name>
