--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -33,6 +33,7 @@
     <servlet-name>IndexServlet</servlet-name>
     <url-pattern>/index.html</url-pattern>
   </servlet-mapping>
+  
   <servlet>
     <servlet-name>TransferServlet</servlet-name>
     <servlet-class>fr.formation.proxi.presentation.TransferServlet</servlet-class>
@@ -41,7 +42,22 @@
     <servlet-name>TransferServlet</servlet-name>
     <url-pattern>/transfer.html</url-pattern>
   </servlet-mapping>
+  
+  
+  
   <servlet>
+    <servlet-name>SearchServlet</servlet-name>
+    <servlet-class>fr.formation.proxi.presentation.SearchServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SearchServlet</servlet-name>
+    <url-pattern>/search.html</url-pattern>
+  </servlet-mapping>
+  
+  
+  <servlet>
+  
+  
     <servlet-name>EditorServlet</servlet-name>
     <servlet-class>fr.formation.proxi.presentation.EditorServlet</servlet-class>
   </servlet>
@@ -70,23 +86,23 @@
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
-  <security-constraint>
-    <web-resource-collection>
-      <web-resource-name>All pages</web-resource-name>
-      <url-pattern>*.html</url-pattern>
-    </web-resource-collection>
-    <auth-constraint>
-      <role-name>admin</role-name>
-    </auth-constraint>
-  </security-constraint>
-  <security-role>
-    <role-name>admin</role-name>
-  </security-role>
-  <login-config>
-    <auth-method>FORM</auth-method>
-    <form-login-config>
-      <form-login-page>/login.jsp</form-login-page>
-      <form-error-page>/login_error.jsp</form-error-page>
-    </form-login-config>
-  </login-config>
+<!--   <security-constraint> -->
+<!--     <web-resource-collection> -->
+<!--       <web-resource-name>All pages</web-resource-name> -->
+<!--       <url-pattern>*.html</url-pattern> -->
+<!--     </web-resource-collection> -->
+<!--     <auth-constraint> -->
+<!--       <role-name>admin</role-name> -->
+<!--     </auth-constraint> -->
+<!--   </security-constraint> -->
+<!--   <security-role> -->
+<!--     <role-name>admin</role-name> -->
+<!--   </security-role> -->
+<!--   <login-config> -->
+<!--     <auth-method>FORM</auth-method> -->
+<!--     <form-login-config> -->
+<!--       <form-login-page>/login.jsp</form-login-page> -->
+<!--       <form-error-page>/login_error.jsp</form-error-page> -->
+<!--     </form-login-config> -->
+<!--   </login-config> -->
 </web-app>
