--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -56,7 +56,23 @@
 		<url-pattern>/transfer.html</url-pattern>
 	</servlet-mapping>
 
+	<servlet>
+		<servlet-name>Jersey Web Services</servlet-name>
+		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
+		<init-param>
+			<param-name>com.sun.jersey.config.property.packages</param-name>
+			<param-value>fr.formation.blog.presentation.rest</param-value>
+		</init-param>
+		<init-param>
+			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</servlet>
 
+	<servlet-mapping>
+		<servlet-name>Jersey Web Services</servlet-name>
+		<url-pattern>/webservices/*</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>SearchServlet</servlet-name>
